src/test/ui/issues/issue-4935.stderr
error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/issue-4935.rs:5:13
   |
LL | fn foo(a: usize) {}
   | ---------------- defined here
LL |
LL | fn main() { foo(5, 6) }
   |             ^^^ -  - supplied 2 arguments
   |             |
   |             expected 1 argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
